apps/backend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-gitops-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-backend
  namespace: my-gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 988067790077.dkr.ecr.ap-south-1.amazonaws.com/observability-backend:prod-2-2f8faa7
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-gitops-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: web
      port: 5000
      targetPort: 5000
