apps/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-frontend
  namespace: my-gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: abhishekdocker03/gitops-frontend:prod-14
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-gitops-app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
